--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/johnlinp/agogo-sing/issues"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "mongoose": "~4.5.7",
     "pug": "~2.0.0-beta4"
