--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/johnlinp/agogo-sing/issues"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "i18n": "^0.8.3",
